Fix the gap between the gallery and the sign up/form section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,7 +207,7 @@ div.desc {
 }
 
 #gallery-section {
-    height: 1050px;
+    height: 1051px;
     width: 100%;
     background-color: #E6C4E5;
     position: relative;
